<resources>
    <string name="app_name">BMI Sederhana</string>
    <string name="bobot">Bobot (kg)</string>
    <string name="tinggi">Tinggi (cm)</string>
    <string name="calculateBMI">Hitung BMI</string>
    <string name="terlalu_sangat_kurus">Terlalu sangat kurus</string>
    <string name="sangat_kurus">Sangat kurus</string>
    <string name="kurus">Kurus</string>
    <string name="normal">Normal</string>
    <string name="gemuk">Gemuk</string>
    <string name="sangat_gemuk">Sangat gemuk</string>
    <string name="cukup_gemuk">Cukup gemuk</string>
    <string name="terlalu_sangat_gemuk">Terlalu sangat gemuk</string>
    <string name="labelAplikasi">Kalkulator BMI</string>
    <string name="umur">Umur (th)</string>
    <string name="textFemale">Female</string>
    <string name="logo_plus">+</string>
    <string name="logo_minus">-</string>
</resources>
